# coco

./: .gitignore  LICENSE  README.md  pyproject.toml
coco/: __init__.py
coco/algorithms/: __init__.py  processing.py
coco/classes/: __init__.py  chocolate.py
coco/utils/: __init__.py  backend.py
